cluster/apps/default/blog/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
    external-dns/is-public: "true"
    #    nginx.ingress.kubernetes.io/auth-url: "http://authelia.networking.svc.cluster.local/api/verify"
    #    nginx.ingress.kubernetes.io/auth-signin: "https://login.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
spec:
  rules:
    - host: "blog.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: blog-svc
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "blog.${SECRET_PUBLIC_DOMAIN}"
